# pyoculus

./: .buildinfo  .gitignore  CHANGELOG.md  README.md  fields.html  fixp_test.py  genindex.html  index.html  installation.html  magneticmaps.html  maps.html  meson.build  objects.inv  pplot_test.py  py-modindex.html  pyproject.toml  search.html  searchindex.js  toybox.html  tutorials.html
.doctrees/: environment.pickle  fields.doctree  index.doctree  installation.doctree  magneticmaps.doctree  maps.doctree  toybox.doctree  tutorials.doctree
.doctrees/_autosummary/: pyoculus.doctree  pyoculus.fields.cylindrical_bfield.doctree  pyoculus.fields.cylindrical_bfield_analytic.doctree  pyoculus.fields.cylindrical_grid_interpolated_field.doctree  pyoculus.fields.doctree  pyoculus.fields.m3dc1_bfield.doctree  pyoculus.fields.magnetic_field.doctree  pyoculus.fields.qfm_bfield.doctree  pyoculus.fields.simsopt_bfield.doctree  pyoculus.fields.spec_bfield.doctree  pyoculus.fields.spectre_bfield.doctree  pyoculus.fields.toroidal_bfield.doctree  pyoculus.fields.two_waves.doctree  pyoculus.geo.doctree  pyoculus.geo.interpolate_coordinates.doctree  pyoculus.integrators.base_integrator.doctree  pyoculus.integrators.doctree  pyoculus.integrators.scipyode_integrator.doctree  pyoculus.integrators.sdc_integrator.doctree  pyoculus.maps.base_map.doctree  pyoculus.maps.cylindrical_bfield_section.doctree  pyoculus.maps.cylindrical_bfield_section.njit.doctree  pyoculus.maps.doctree  pyoculus.maps.integrated_map.doctree  pyoculus.maps.standard_map.doctree  pyoculus.maps.standard_map.return_f_t_pure.doctree  pyoculus.maps.standard_map.standardmap_f_pure.doctree  pyoculus.maps.standard_map.standardmap_frev_pure.doctree  pyoculus.maps.tokamap.doctree  pyoculus.maps.tokamap.return_f_t_pure.doctree  pyoculus.maps.tokamap.tokamap_f_pure.doctree  pyoculus.maps.tokamap.tokamap_frev_pure.doctree  pyoculus.maps.toroidal_bfield_section.doctree  pyoculus.solvers.base_solver.doctree  pyoculus.solvers.doctree  pyoculus.solvers.fixed_point.doctree  pyoculus.solvers.flux_surface_gr.doctree  pyoculus.solvers.lyapunov_exponent.doctree  pyoculus.solvers.manifold.doctree  (+48 more)
_autosummary/: pyoculus.fields.cylindrical_bfield.html  pyoculus.fields.cylindrical_bfield_analytic.html  pyoculus.fields.cylindrical_grid_interpolated_field.html  pyoculus.fields.html  pyoculus.fields.m3dc1_bfield.html  pyoculus.fields.magnetic_field.html  pyoculus.fields.qfm_bfield.html  pyoculus.fields.simsopt_bfield.html  pyoculus.fields.spec_bfield.html  pyoculus.fields.spectre_bfield.html  pyoculus.fields.toroidal_bfield.html  pyoculus.fields.two_waves.html  pyoculus.geo.html  pyoculus.geo.interpolate_coordinates.html  pyoculus.html  pyoculus.integrators.base_integrator.html  pyoculus.integrators.html  pyoculus.integrators.scipyode_integrator.html  pyoculus.integrators.sdc_integrator.html  pyoculus.maps.base_map.html  pyoculus.maps.cylindrical_bfield_section.html  pyoculus.maps.cylindrical_bfield_section.njit.html  pyoculus.maps.html  pyoculus.maps.integrated_map.html  pyoculus.maps.standard_map.html  pyoculus.maps.standard_map.return_f_t_pure.html  pyoculus.maps.standard_map.standardmap_f_pure.html  pyoculus.maps.standard_map.standardmap_frev_pure.html  pyoculus.maps.tokamap.html  pyoculus.maps.tokamap.return_f_t_pure.html  pyoculus.maps.tokamap.tokamap_f_pure.html  pyoculus.maps.tokamap.tokamap_frev_pure.html  pyoculus.maps.toroidal_bfield_section.html  pyoculus.solvers.base_solver.html  pyoculus.solvers.fixed_point.html  pyoculus.solvers.flux_surface_gr.html  pyoculus.solvers.html  pyoculus.solvers.lyapunov_exponent.html  pyoculus.solvers.manifold.eig.html  pyoculus.solvers.manifold.html  (+47 more)
_sources/: magneticmaps.rst.txt  toybox.rst.txt
doc/src/: conf.py  fields.rst  (+3 more)
examples/: hello_pplot.py  island.py  simsopt_ncsx.py  toybox_ha.ipynb  toybox_tok.ipynb  two_waves.ipynb
pyoculus/: __init__.py
tests/: solver_manifold_linreg.py  test_integrators.py  test_irrationals_continued_fraction.py
(+156 files in other folders)
